# notion-workspace-synth

./: .gitignore  AGENTS.md  CHANGELOG.md  CLONE_FEATURES.md  Dockerfile  INCIDENTS.md  Makefile  PLAN.md  PRODUCT_ROADMAP.md  PROJECT_MEMORY.md  README.md  UPDATE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENTERPRISE.md  ENTRA.md  LLM.md  NOTION.md  PLAN.md  PROJECT.md  RELEASE.md  ROADMAP.md  SECURITY.md
scripts/: demo_smoke.py  release_check.py
src/notion_synth/: audit.py  blueprint_generator.py  blueprint_models.py  cli.py  db.py  errors.py  fault_injection.py  fixtures.py  generator.py  main.py  models.py  packs.py  roster.py  routes.py  state.py  util.py
src/notion_synth/llm/: __init__.py  enrich.py
src/notion_synth/providers/: __init__.py
src/notion_synth/providers/entra/: __init__.py  apply.py  graph.py  verify.py
src/notion_synth/providers/notion/: __init__.py  apply.py  client.py
tests/: test_api.py  test_audit.py  test_blueprint.py  test_cli_packs_profiles.py  test_cors.py  test_errors.py  test_fault_injection.py  test_generator.py  test_makefile.py  test_packs.py  test_placeholder_resolution.py  test_providers.py  test_provisioning.py  test_roster.py
