[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notion-workspace-synth"
version = "0.1.0"
description = "Synthetic Notion-like workspace API with demo org seeding."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sarvesh Kapre" }]
keywords = ["notion", "synthetic-data", "workspace", "fastapi"]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "ruff>=0.5.5",
  "mypy>=1.10.0",
  "bandit>=1.7.9",
  "pip-audit>=2.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "-q"
